--- a/src/views/faculty/addTest.html
+++ b/src/views/faculty/addTest.html
@@ -2,7 +2,7 @@
     <div class="col-md-6">
         <div class="card">
             <div class="card-header">
-                <i class="fa fa-ticket text-primary"></i>Add News or Events
+                <i class="fa fa-ticket text-primary"></i>Add Assessments
             </div>
             <div class="card-body">
                 <form action="" method="post" enctype="multipart/form-data" class="form-horizontal">
