--- a/src/views/common/applicationForm.html
+++ b/src/views/common/applicationForm.html
@@ -5,7 +5,7 @@
                 <div class="card-group">
                     <div class="card p-4">
                         <div class="card-body">
-                            <h1 class="text-center">FindInbox</h1>
+                            <h1 class="text-center">Spring ESR</h1>
                             <p class="text-muted text-center">Enter your Application Form Number</p>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
