--- a/src/views/faculty/learningOutcome.html
+++ b/src/views/faculty/learningOutcome.html
@@ -27,7 +27,7 @@
                                 <table class="table table-responsive-sm table-outline mb-0" ng-if="studentsToShow.length > 0">
                                     <thead class="thead-light">
                                         <tr class="text-center">
-                                            <th>FindInboxId</th>
+                                            <th>Spring ESR Id</th>
                                             <th>Student Name</th>
                                             <th>Course Outcome</th>
                                         </tr>
