--- a/src/views/common/footer.html
+++ b/src/views/common/footer.html
@@ -1,4 +1,4 @@
 <footer class="app-footer" ng-controller="MainController">
     <span><a href="http://www.springesr.com" target="_blank">Spring ESR</a> &copy; 2018 | <small>{{loggedInUser.PackageCode}}</small> | <small>{{loggedInUser.Type}}</small></span>
-    <span class="ml-auto">Powered by <a href="http://www.springesr.com" target="_blank">Spring ESR Pvt Ltd</a></span>
+    <span class="ml-auto">Powered by <a href="http://www.springesr.com" target="_blank">Spring Equinoxx Global Solutions Pvt Ltd</a></span>
 </footer>
